# Diabetic_Retinopathy_Classification

./: README.md  pyproject.toml  setup.py
classification/data/: datamodules.py  datasets.py  samplers.py  transforms.py
classification/models/: metrics.py  models.py
configs/: test.toml  train.toml
notebooks/: analysis1.ipynb  analysis3.ipynb  analysis4.ipynb  analysis5.ipynb
scripts/: test.py  train.py
